# image-recovery

./: .gitignore  .rustfmt.toml  CHANGELOG.md  Cargo.toml  LICENSE  README.md
.github/workflows/: test.yml
examples/: README.md  denoise.rs  denoise_each_channel.rs  denoise_multichannel.rs
src/: array_ops.rs  differentiable_array.rs  image_array.rs  img.rs  img_tests.rs  lib.rs  ops.rs  ops_tests.rs  solvers.rs  solvers_tests.rs  utils.rs  utils_tests.rs
src/_impl/: array_ops.rs  img.rs  mod.rs  ops.rs
src/ops/: average.rs  gradient.rs  mod.rs  norm.rs  vector_len.rs
src/tests/: impl_array_ops.rs  impl_img.rs  impl_ops.rs  mod.rs  rgbmatrices.rs  solvers.rs  utils.rs
tests/: denoise.rs
