[package]
name = "image-recovery"
version = "0.1.0"
edition = "2021"
authors = ["Lílian Ferreira de Freitas <lily.mosquitoes@gmail.com>", "Emilia L. K. Blåsten <emilia.blasten@iki.fi>"]
description = "Image recovery algorithms, implemented in Rust."
license = "AGPL-3.0-or-later"
readme = "README.md"
repository = "https://github.com/lily-mosquitoes/image-recovery"
documentation = "https://docs.rs/image-recovery"
categories = ["mathematics"]

[dependencies]
image = "0.24"
ndarray = { version = "0.15", features = ["matrixmultiply-threading"] }

[dev-dependencies]
pretty_assertions = "1"
rand = "0.8"
